test/org/midica/testfiles/failing/eff-func-mono-mode-line.midica
INCLUDE inc/instruments.midica


0: mono_mode.line(0,16)
